--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 
 		<servlet.version>3.1.0</servlet.version>
 		<jackson.version>2.9.0</jackson.version>
+		<httpclient.version>4.5.6</httpclient.version>
 	</properties>
 
 	<dependencies>
@@ -251,6 +252,13 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
+		</dependency>
+
+		<!--httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpclient.version}</version>
 		</dependency>
 
 	</dependencies>
